# marketing-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  srs.md
.cursor/rules/: agent-marketing-plataform.mdc
infra/: main.tf
infra/kubernetes/: .env.production  .env.secrets  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  rbac.yaml  secret.yaml  service.yaml
src/: logging_config.py  main.py  settings.py
src/agents/: __init__.py  graph.py  state.py
src/agents/odin/: __init__.py  nodes.py
